# autochroma-mini-studio

./: .gitignore  README.ja.md  README.md  start.bat  start.sh
backend/: README.md  pyproject.toml
backend/app/: __init__.py  ffmpeg_tools.py  jobs.py  main.py  models.py  settings.py  storage.py
backend/tests/: conftest.py  test_api.py  test_ffmpeg_tools.py  test_jobs.py  test_storage.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.test.ts  client.ts  types.ts
frontend/src/components/: FileStep.test.tsx  FileStep.tsx  KeySettings.test.tsx  KeySettings.tsx  LogPane.tsx  PreviewPane.tsx  RenderPane.tsx
